feat: :sparkles: Add gamespec api
