# eroge_review_server/src/eroge_review_server/common/game_spec/model.py
@@ -1,5 +1,5 @@
 import uuid
-from typing import Optional
+from datetime import date
 
 from sqlalchemy import CHAR
 from sqlmodel import Field, SQLModel
@@ -7,10 +7,13 @@ from sqlmodel import Field, SQLModel
 
 class GameSpecBase(SQLModel):
     title: str
-    brand: Optional[str] = None
+    brand: str
+    release_date: date
 
 
 class GameSpec(GameSpecBase, table=True):
+    __tablename__ = "game_spec"
+
     id: str = Field(
         default_factory=lambda: uuid.uuid7().hex,
         primary_key=True,
@@ -21,3 +24,14 @@ class GameSpec(GameSpecBase, table=True):
 
 class GameSpecCreate(GameSpecBase):
     pass
+
+
+class GameSpecUpdate(GameSpecBase):
+    pass
+
+
+class GameSpecListResponse(SQLModel):
+    items: list[GameSpec]
+    total: int
+    page: int
+    page_size: int
